--- a/about.html
+++ b/about.html
@@ -31,18 +31,18 @@
         <h2>Our Team</h2>
         <div class="team-members">
             <div class="team-member">
-                <img src="./images/lklkl.jpg" alt="Team Member 1">
+                <img src="lklkl.jpg" alt="Team Member 1">
                 <h3>Marya Kim</h3>
                 <p>CEO & Founder </p>
                
             </div>
             <div class="team-member">
-                <img src="./images/mmmm.jpg" alt="Team Member 2">
+                <img src="mmmm.jpg" alt="Team Member 2">
                 <h3>Alex Kan</h3>
                 <p>Lead Designer</p>
             </div>
             <div class="team-member">
-                <img src="./images/mnmnm.jpg" alt="Team Member 3">
+                <img src="mnmnm.jpg" alt="Team Member 3">
                 <h3>Saren Ahran</h3>
                 <p>Head of Marketing</p>
             </div>
